# SFML_CHESS

./: CMakeLists.txt  CMakePresets.json  README.md
include/: Client.cpp  Client.h  Command.h  Controller.h  GameModel.h  MoveCommand.h  Piece.h  PieceFactory.h  Player.h  PromoteCommand.h  Server.h  Square.h  Tile.h  View.h
include/iamgui/: imconfig.h
res/shaders/: RedHighlight.frag  TileColour.frag  fresnel.frag
src/: Client.cpp  Controller.cpp  GameModel.cpp  MoveCommand.cpp  Piece.cpp  PieceFactory.cpp  Player.cpp  PromoteCommand.cpp  Server.cpp  Square.cpp  Tile.cpp  View.cpp  main.cpp
src/iamgui/: imgui-SFML.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
